--- a/index.html
+++ b/index.html
@@ -5,10 +5,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
   <title>Library</title>
 </head>
 <body>
-  
+  <main>
+    <fieldset>
+      <form id="form" action="" onsubmit="return false">
+        <legend>Add book to library</legend>
+        <label for="title">Title:</label>
+        <input type="text" name="title" id="title" required>
+        <label for="author">Author:</label>
+        <input type="text" name="author" id="author" required>
+        <label for="pages">Pages:</label>
+        <input type="number" name="pages" id="pages" required>
+        <input type="radio" name="readStatus" id="readStatus-Read" value="read" required>
+        <label for="readStatus-Read">Read</label>
+        <input type="radio" name="readStatus" id="readStatus-NotRead" value="not read yet" required>
+        <label for="readStatus-NotRead">Not read</label>
+        <button type="submit">Add book</button>
+      </form>
+    </fieldset>
+    <div class="cardContainer">
+    </div>
+  </main>
 </body>
 </html>
